typescript/checker/tests/conformance/classes/classDeclarations/classExtendingNonConstructor.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classExtendingNonConstructor.ts:1:5
  |
1 | var x: {};
  |     ^

